--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "csun-metalab/lumen-force-https": "^1.0",
         "laravel/lumen-framework": "5.7.*",
         "vlucas/phpdotenv": "~2.2"
     },
